fix(spacing): spacing issue

--- a/pages/card-gallery/assets/css/style.css
+++ b/pages/card-gallery/assets/css/style.css
@@ -10,11 +10,6 @@ body {
     background-size: cover;
 }
 
-section.body .hero5,
-section.body .hero5 * {
-    border: 2px pink dashed;
-}
-
 section.body {
     display: flex;
     justify-content: center;
@@ -655,6 +650,7 @@ section.body {
     & > .hero5 {
         display: flex;
         width: 100vw;
+        height: 50vh;
         background-image: url(../img/backgrounds/raze-background.jpg);
         background-position: 0px -30vh;
         background-size: cover;
@@ -663,6 +659,7 @@ section.body {
 
         & > .static-card {
             transform: scale(0.5);
+            width: 20%;
 
             & > .static {
                 display: flex;
@@ -741,6 +738,7 @@ section.body {
             align-items: flex-start;
             flex-direction: row;
             color: white;
+            margin-left: 10vw;
 
             & > h1 {
                 font-size: 100px;
@@ -807,6 +805,7 @@ section.body {
 
         & > .animated-card {
             transform: scale(0.6);
+            width: 30%;
 
             & > .animated {
                 display: flex;
